# kompile

./: .gitignore  CLAUDE-CODE-INSTRUCTIONS.md  CLAUDE-CODE-INSTRUCTIONS_new.md  CLAUDE.md  README.md  kompile-product-doc.md  kompile-product-doc_new.md  kompile.yaml  pyproject.toml
demo/: package-lock.json  package.json
demo/src/: App.css  App.jsx  index.css
demo/src/components/: About.jsx  Articles.jsx  Overview.jsx  QA.jsx
demo/src/data/: knowledgeBase.js
kompile/: __init__.py  cli.py  config.py  models.py  state.py  utils.py
kompile/compiler/: __init__.py  classify.py  compile.py  filter.py  prompts.py  summarize.py  writer.py
kompile/ingest/: __init__.py  article.py  chatgpt.py  claude.py  claude_code.py  raw.py  router.py  youtube.py
kompile/mcp/: __init__.py  server.py
